# bigrquerystorage

./: .Rbuildignore  .gitattributes  .gitignore  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  bigrquerystorage.Rproj  cleanup  cleanup.win  configure  configure.ac  configure.win  cran-comments.md
.github/workflows/: R-CMD-check.yaml  linux.yaml
R/: RcppExports.R  bigrquerystorage.R  bqs_client.R  bqs_download.R  client_info.R  cpp11.R  dbi.R  metadata.R  onload.R  proto_skeleton.R
demo/: bigquery_storage.R
inst/bqs_config/: bigquerystorage_grpc_service_config.json
inst/proto/google/api/: client.proto  field_behavior.proto  resource.proto
inst/proto/google/protobuf/: descriptor.proto
man/: DBI.Rd  bigrquerystorage-package.Rd  bqs_auth.Rd  bqs_client.Rd  bqs_table_download.Rd  bqs_ua.Rd  grpc_version.Rd  overload_bq_table_download.Rd
scripts/: install_debian_ubuntu.sh  notes_debug_build.txt  protos.R
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.withgrpc  Makevars.win.withoutgrpc  RProgress.h  RcppExports.cpp  bqs.cpp  cpp11.cpp  grpc_util.cpp  onload.c
src/google/api/: annotations.pb.h  field_behavior.grpc.pb.cc  field_behavior.pb.cc  http.grpc.pb.h  resource.pb.cc
src/googleapis/: storage.descriptor
src2/: Makefile  bigquery_storage_client.cc
src2/google/api/: client.grpc.pb.cc  client.pb.cc  http.pb.h  resource.grpc.pb.cc  resource.pb.h
tests/: testthat.R
tests/testthat/: test-integration.R
tools/: config.R  winlibs.R
tools/config/: cleanup.R  configure.R  functions.R
(+38 files in other folders)
